# aidoku-cli

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  build.ts  go.mod  go.sum  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  vite.config.ts
.github/workflows/: release.yaml
cmd/aidoku/: main.go
cmd/aidoku/cmd/: build.go  completions.go  init.go  logcat.go  root.go  serve.go  verify.go  version.go
cmd/aidoku/cmd/resources/schemas/: filters.schema.json  settings.schema.json  source.schema.json
internal/common/: common.go  utils.go
internal/logcat/: utils.go
internal/templates/: assemblyscript.go  clang.go  common.go  rust-template.go  rust.go  templates.go
internal/templates/resources/assemblyscript/: package.json.tmpl
internal/templates/resources/assemblyscript/src/: Source.ts.tmpl  index.ts.tmpl
internal/templates/resources/clang/src/: main.c.tmpl
internal/templates/resources/common/res/: source.json.tmpl
internal/templates/resources/rust/: Cargo.toml.tmpl  build.ps1.tmpl
internal/templates/resources/rust/src/: helper.rs.tmpl  (+1 more)
internal/verify/: schemas.go
internal/watcher/: batcher.go
internal/watcher/filenotify/: filenotify.go  poller.go
scripts/: alpine.d.ts  completions  elements.js  index.d.ts  index.js
src/: App.svelte  index.css  logcat.rs  main.rs  main.ts
src/lib/components/: Badge.svelte  Loading.svelte  SourceFilter.svelte  SourceItem.svelte  SourceList.svelte  SourcesWrapper.svelte
src/lib/types/: source.d.ts
src/lib/utils/: languages.ts
styles/: index.css  index.scss
(+2 files in other folders)
