[package]
name = "aidoku-cli"
version = "0.5.0"
authors = ["beerpsi <beerpsi@duck.com>"]
edition = "2021"
rust-version = "1.64"
description = "Aidoku source development toolkit"
repository = "https://github.com/Aidoku/aidoku-cli"
license = "0BSD"
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "aidoku"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.60"
atty = "0.2.14"
chrono = "0.4.19"
clap = { version = "3.2.16", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
clap_complete = "3.2.3"
env_logger = "0.9.0"
log = "0.4.17"
rayon = "1.5.3"
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
termcolor = "1.1.3"
tokio = { version = "1.20.1", features = ["full"] }
warp = "0.3.2"
wild = "2.0.4"
zip = "0.6.2"
